# ai-mental-chatbot-sdk

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
data/: knowledge_seed.json
docs/docs/: ethics.md
nginx/: nginx.conf
scripts/: mongo-init.js  run_local.sh  seed_knowledge.sh
src/: db.rs  embeddings.rs  main.rs  rag.rs
